# SO

./: .TrabalhoAtendimento.txt  .gitignore  .gitignore.save  README.md
Barbeiro/: CMakeLists.txt  main.cpp
C-C++/AtendimentoSuperGerente/: Atendente.cpp  Atendente.h  CMakeLists.txt  main.cpp
C-C++/AtendimentoViaFork/: CMakeLists.txt  main.cpp
C-C++/ExercicioAtendentes/: CMakeLists.txt  main.cpp
C-C++/Exercicios Apostila C/: ExercicioRelevanteI  ExercicioRelevanteI.cpp
C-C++/FilhoQueVolta/: CMakeLists.txt
C-C++/Fork/: CMakeLists.txt  main.cpp
C-C++/ManipularArquivosC++/: CMakeLists.txt  main.cpp  myfile.txt
C-C++/MegaRestaurante/: CMakeLists.txt  Cozinheiro.cpp  Cozinheiro.h  Mesa.cpp  Mesa.h  main.cpp
C-C++/NovoProjeto/: CMakeLists.txt  main.cpp
CozinhaMagica/: CMakeLists.txt  Cardapio.cpp  Cardapio.h  Comida.cpp  Comida.h  Cozinheiro.cpp  Cozinheiro.h  Pedido.cpp  Pedido.h  Pedidos.cpp  Pedidos.h  Restaurante.cpp  Restaurante.h  main.cpp
CozinhaMagica (cópia) Com Buf Fim/: Cardapio.cpp  Comida.h  Cozinheiro.cpp  Cozinheiro.h  Pedidos.h  Restaurante.cpp  Restaurante.h
CozinhaMagica/Log_Atendimento/: ChefeCozinha_1  ChefeCozinha_2  ChefeCozinha_3  ChefeCozinha_Relatorio_ALL
CozinhaMagica/RegistrosParaTestes/: ExemploEntrada
CozinhaMagica2/: CMakeLists.txt  Restaurante.cpp  Restaurante.h  main.cpp
Lista 1/: lista1.aux  lista1.tex
Lista 2/: lista2.aux  lista2.tex
Thread/: CMakeLists.txt  Cozinheiro.cpp  Cozinheiro.h  main.cpp  pedido.cpp  pedido.h
regex/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt  main.c
untitled1/: main.cpp
(+75 files in other folders)
